<resources>
    <string name="app_name">UniEval</string>
    <string name="search_title">Search</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_user">LoginUserActivity</string>
    <string name="leicester_about">The University of Leicester is a public research university based in Leicester, England. The main campus is south of the city centre, adjacent to Victoria Park. The university\'s predecessor, University College, Leicester, gained university status in 1957.</string>
    <string name="lorem_ipsum">Unieval (University Evaluation) is a school evaluation system whose objective and purpose is to lay out imperative insight on different schools, by giving a well constructive structure for appraisal of these universities through required user criteria. This application was developed by team 7 for CO7095 coursework-</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="app_label">UniEval</string>
    <string name="search_hint">Enter University Name</string>
    <string name="rank">Rank</string>
    <string name="rating">Rating</string>
    <string name="courses">Courses</string>
    <string name="research">Research</string>
    <string name="mission_statement">Mission Statement</string>
    <string name="award">Award</string>
    <string name="illustration">Illustration</string>
    <string name="bpc">BPC</string>
    <string name="liberty">Liberty</string>
    <string name="anderson">Anderson</string>
    <string name="read_more">READ MORE</string>
    <string name="overview">Overview</string>
    <string name="disciplines">Disciplines</string>
    <string name="rating_and_reviews">Rating and reviews</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="see_results">see results</string>
    <string name="select">Select</string>
    <string name="internship_opportunities">Internship opportunities</string>
    <string name="grad_employment_rate">Grad Employment rate</string>
    <string name="teacher_student_ratio">Teacher Student Ratio</string>
    <string name="facilities_score">Facilities Score</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="fees">Fees</string>
    <string name="course">Course</string>
    <string name="discipline">Discipline</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="user_type">User type</string>
    <string name="title">Title</string>
    <string name="profile">Profile</string>
    <string name="b19_3lz_leicester">B19 3LZ. Leicester</string>
    <string name="university_of_leicester">University of Leicester</string>
    <string name="research_field">Research Field</string>
    <string name="work_life_balance">Work life balance</string>
    <string name="professional_development">Professional development</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="remember_password">Remember Password?</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="login">Login</string>
    <string name="add_details_of_university_in_these_category">Add Details of University in these Category</string>
    <string name="criteria_score">Criteria Score</string>
    <string name="administrator">Administrator</string>
</resources>