<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/see_result_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/criteria_search_professor_research_field_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/research_field"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/criteria_search_professor_research_field_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/outline_info_24"
                    app:layout_constraintBottom_toBottomOf="@+id/criteria_search_professor_research_field_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/criteria_search_professor_research_field_textview"
                    app:tint="@color/iconColor" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/criteria_search_professor_research_select_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    app:boxBackgroundColor="?attr/colorSurface"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_research_field_textview"
                    app:startIconDrawable="@drawable/outline_library_books_24">

                    <AutoCompleteTextView
                        android:id="@+id/criteria_search_professor_research_select_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/criteria_search_professor_expectedSalary_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="Expected salary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_research_select_textInput" />

                <ImageView
                    android:id="@+id/criteria_search_professor_expectedSalary_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/outline_info_24"
                    app:tint="@color/iconColor"
                    app:layout_constraintBottom_toBottomOf="@+id/criteria_search_professor_expectedSalary_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/criteria_search_professor_expectedSalary_textview" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/criteria_search_professor_minExpectedSalary_TextInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/min"
                    app:boxBackgroundColor="?attr/colorSurface"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_expectedSalary_textview"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:startIconDrawable="@drawable/outline_attach_money_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/criteria_search_professor_minExpectedSalary_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/criteria_search_professor_maxExpectedSalary_TextInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/max"
                    app:boxBackgroundColor="?attr/colorSurface"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_minExpectedSalary_TextInput"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:startIconDrawable="@drawable/outline_attach_money_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/criteria_search_professor_maxExpectedSalary_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/criteria_search_professor_workLife_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/work_life_balance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_maxExpectedSalary_TextInput" />

                <ImageView
                    android:id="@+id/criteria_search_professor_workLife_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/outline_info_24"
                    app:tint="@color/iconColor"
                    app:layout_constraintBottom_toBottomOf="@+id/criteria_search_professor_workLife_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/criteria_search_professor_workLife_textview" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/criteria_search_professor_workLife_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/select"
                    app:boxBackgroundColor="?attr/colorSurface"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_workLife_textview"
                    app:startIconDrawable="@drawable/outline_sentiment_satisfied_alt_24">

                    <AutoCompleteTextView
                        android:id="@+id/criteria_search_professor_workLife_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/criteria_search_professor_labScore_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="Lab Score"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_workLife_textInput" />

                <ImageView
                    android:id="@+id/criteria_search_professor_labScore_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/outline_info_24"
                    app:tint="@color/iconColor"
                    app:layout_constraintBottom_toBottomOf="@+id/criteria_search_professor_labScore_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/criteria_search_professor_labScore_textview" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/criteria_search_professor_labScore_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/select"
                    app:boxBackgroundColor="?attr/colorSurface"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_labScore_textview"
                    app:startIconDrawable="@drawable/outline_sentiment_very_satisfied_24">

                    <AutoCompleteTextView
                        android:id="@+id/criteria_search_professor_labScore_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/criteria_search_professor_professionalDevelopment_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/professional_development"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="?attr/colorOnSurface"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_labScore_textInput" />


                <ImageView
                    android:id="@+id/criteria_search_professor_professionalDevelopment_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/outline_info_24"
                    app:tint="@color/iconColor"
                    app:layout_constraintBottom_toBottomOf="@+id/criteria_search_professor_professionalDevelopment_textview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/criteria_search_professor_professionalDevelopment_textview" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/criteria_search_professor_professionalDevelopment_textInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/select"
                    app:boxBackgroundColor="?attr/colorSurface"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/criteria_search_professor_professionalDevelopment_textview"
                    app:startIconDrawable="@drawable/outline_handyman_24">

                    <AutoCompleteTextView
                        android:id="@+id/criteria_search_professor_professionalDevelopment_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/see_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/see_results"
            android:textColor="?attr/colorOnSecondary"
            app:backgroundTint="?attr/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>